@@ -87,6 +87,9 @@ http://lists.gnu.org/archive/html/bug-gnu-emacs/2007-09/msg00020.html
 ** Bug/Patch view.el
 http://lists.gnu.org/archive/html/bug-gnu-emacs/2007-09/msg00073.html
 
+** ses-mode runs unsafe functions even if you say "n" when prompted
+http://lists.gnu.org/archive/html/bug-gnu-emacs/2007-09/msg00109.html
+
 * FIXES FOR EMACS 22.3
 
 Here we list any small fixes that arrived too late for Emacs 22.2, but
